samples/_failures_safe/1761259360_911828_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe05aff1.c: In function ‘main’:
./samples/SAFE/__tmp_fe05aff1.c:138:5: error: expected expression at end of input
  138 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_fe05aff1.c:138:5: error: expected declaration or statement at end of input
